# riichiai

./: README.md  pyproject.toml
src/riichiai/: __init__.py  cli.py  dataset.py  engine.py  model.py  train.py
